@@ -70,21 +70,21 @@ Installing OpenGeo Suite Enterprise Edition
       * - System
         - Command
       * - CentOS 5, 32 bit
-        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/centos/5/i386/OpenGeoEE.repo``
+        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/suite/v3/centos/5/i386/OpenGeoEE.repo``
       * - CentOS 5, 64 bit
-        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/centos/5/x86_64/OpenGeoEE.repo``
+        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/suite/v3/centos/5/x86_64/OpenGeoEE.repo``
       * - CentOS 6, 32 bit
-        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/centos/6/i686/OpenGeoEE.repo``
+        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/suite/v3/centos/6/i386/OpenGeoEE.repo``
       * - CentOS 6, 64 bit
-        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/centos/6/x86_64/OpenGeoEE.repo``
+        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/suite/v3/centos/6/x86_64/OpenGeoEE.repo``
       * - RHEL 5, 32 bit
-        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/rhel/5/i386/OpenGeoEE.repo``
+        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/suite/v3/rhel/5/i386/OpenGeoEE.repo``
       * - RHEL 5, 64 bit
-        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/rhel/5/x86_64/OpenGeoEE.repo``
+        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/suite/v3/rhel/5/x86_64/OpenGeoEE.repo``
       * - RHEL 6, 32 bit
-        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/rhel/6/i686/OpenGeoEE.repo``
+        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/suite/v3/rhel/6/i386/OpenGeoEE.repo``
       * - RHEL 6, 64 bit
-        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/rhel/6/x86_64/OpenGeoEE.repo``
+        - ``wget --user='<username>' --password='<password>' http://yum-ee.opengeo.org/suite/v3/rhel/6/x86_64/OpenGeoEE.repo``
 
 #. Edit the downloaded :file:`OpenGeoEE.repo` file, filling in your user name and password in place of ``<yourUserName>`` and ``<yourPassword>``.
 
@@ -186,11 +186,11 @@ Uninstall OpenGeo Suite 2.x
 
 .. note:: If you are running CentOS/RHEL 6 or above you may skip this step.
 
-#. Due to conflicts with the way that CentOS 5 manages postgresql packages, it is necessary to active remove the entire OpenGeo Suite installation before continuing with the upgrade. The easiest way to remove the entire set of packages for a Suite 2.x installation is to remove the ``postgresql84-libs`` package.
+#. Due to a conflict with CentOS 5 postgreSQL package management, the entire OpenGeo Suite installation must be removed before continuing with the upgrade. The easiest way to remove the postgreSQL packages for a Suite 2.x installation is to remove the ``postgresql84`` package.
 
    .. code-block:: console
 
-      yum remove postgresql84-libs
+      yum remove postgresql84
 
 Install OpenGeo Suite 3.x
 ^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -321,8 +321,6 @@ Restore PostGIS data
 Restore GeoServer configuration
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-.. note:: If you are running CentOS/RHEL 6 or above and did not uninstall Suite version 2 you may skip this step.
-
 #. Stop tomcat and restore the GeoServer data directory to its original location.
 
    .. code-block:: console
@@ -337,6 +335,12 @@ Restore GeoServer configuration
   .. code-block:: console
 
      service tomcat5 start
+
+.. note::
+
+   Memory requirements for OpenGeo Suite 3 have increased, which requires modification to the Tomcat Java configuration. These settings are not automatically updated on upgrade and must be set manually. 
+
+   To make the change, edit the file :file:`/etc/sysconfig/tomcat6` (or :file:`/etc/sysconfig/tomcat5` if it exists) and append ``-XX:MaxPermSize=256m`` to the ``JAVA_OPTS`` command. Restart the OpenGeo Suite for the change to take effect.
 
 Continue reading at the :ref:`installation.linux.suite.details` section.
 
